--- a/Project 6/style.css
+++ b/Project 6/style.css
@@ -140,6 +140,10 @@ p {
   }
 
   .project-text{
-    font-size: 10px;
-}
+        font-size: 10px;
+    }
+  .dropdown-content{
+    top: 15px;
+    min-width: 123px;
+  }
 }
